# LivingObjects

./: .gitignore  CLAUDE.md  CNAME  agent.md  circular-dependency-resolution-plan.md  core-classes-analysis.md  cpp-bytecode-interpreter-plan.md  cpp-simplification-plan.md  go-interpreter-primitive-initialization-plan.md  go-interpreter-restructuring-plan.md  index.html  manual-sunit-test.md  principles.html  self-hosting-milestone-plan.md  smalltalk-image-build-plan.md  smalltalk-implementation-plan.md  smalltalk-primitives-specification.md  smalltalk-vm-specification.md  todo.txt
src/cpp/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Makefile.simple  Makefile.simple_test  TESTING.md  debug_array_size  debug_array_size.cpp  debug_bnf.cpp  debug_keyword.cpp  debug_parser  debug_parser.cpp  debug_simple  debug_simple.cpp  debug_string_concat.cpp  debug_temp_vars.cpp  demo_arithmetic.st  demo_fresh.image  demo_image.sh  demo_loaded.image  demo_values.st  implementation-plan.md  loaded.image  plan.md  run_all_tests.sh  run_expressions.sh  run_tests.sh  simple.image  test.image  test_array_new.cpp  test_block_class  test_block_class.cpp  test_block_execution  test_block_execution.cpp  test_block_parser  test_block_parser.cpp  test_blocks_final  test_blocks_final.cpp  test_exact  (+19 more)
src/cpp/docs/: block_execution_memory_layout.md  context_stack_memory_layout.md  implementation_plan.md
src/cpp/include/: ast.h  bootstrap_api.h  bootstrap_builder.h  bytecode.h  compiled_method.h  context.h  globals.h  interpreter.h  logger.h  memory_manager.h  method_compiler.h  object.h  primitive_methods.h  primitives.h  simple_compiler.h  simple_interpreter.h  simple_memory_manager.h  simple_object.h  simple_parser.h  simple_tagged_value.h  simple_vm.h  smalltalk_class.h  smalltalk_exception.h  smalltalk_image.h  smalltalk_object.h  smalltalk_string.h  smalltalk_vm.h  symbol.h  tagged_value.h  vm_debugger.h  vm_support.h
src/cpp/src/: bootstrap_builder.cpp  compiled_method.cpp  globals.cpp  image_tool.cpp  interpreter.cpp  main.cpp  memory_manager.cpp  method_compiler.cpp  object.cpp  primitive_methods.cpp  primitives.cpp  simple_compiler.cpp  simple_interpreter.cpp  simple_object.cpp  (+13 more)
(+394 files in other folders)
